# embedded_c_data_structures

./: README.md  dlist.h  rbtree.c  rbtree.h  ringbuf.h  slist.h  tree.h  util.h
.github/workflows/: test.yml
test/: CMakeLists.txt  test.h  test.sh  test_dlist.c  test_rbtree.c  test_ringbuf.c  test_slist.c  test_tree_rb.c  test_tree_splay.c
